# StravaProtocolGenerator

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
app/: __init__.py  app.icns  applink.py  backup.py  config.py  html_render.py  http_browser.py  leaderboard.py  leaderboard_api.py  main.py  main_window.py  matching.py  models.py  paths.py  pipeline.py  scoring.py  scraper.py  selenium_driver.py  site_api.py  store.py  timeparse.py  windows.py
tests/: test_applink.py  test_backup.py  test_config.py  test_gitignore.py  test_html_render.py  test_http_browser.py  test_leaderboard.py  test_leaderboard_api.py  test_matching.py  test_models.py  test_paths.py  test_pipeline.py  test_scoring.py  test_scraper.py  test_selenium_driver.py  test_site_api.py  test_smoke.py  test_store.py  test_timeparse.py  test_ui.py  test_windows.py
