[project]
name = "strava-protocol-generator"
version = "0.1.2"
description = "Generate competition protocols from Strava segment results"
authors = [{ name = "Denis Chernykh", email = "education03@mail.ru" }]
requires-python = ">=3.14,<3.15"
dependencies = [
    "PySide6>=6.8",
    "selenium>=4.27,<5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16,<0.16",
    "pre-commit>=4.6.0,<5",
    "mypy>=2.1.0,<3",
    "commitizen>=4.16.3,<5",
    "pytest>=9.0.3,<10",
    "pytest-xdist>=3.8.0,<4",
    "pytest-asyncio>=1.4.0,<2",
    "pytest-cov>=7.1.0,<8",
]

[tool.uv]
package = false
default-groups = "all"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "C90", # McCabe cyclomatic complexity
    "UP",  # pyupgrade - modernise syntax for target Python version
    "B",   # flake8-bugbear - common bugs and design issues
    "S",   # flake8-bandit - security
    "PTH", # flake8-use-pathlib - prefer pathlib over os.path
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
parallel = true
omit = ["app/main.py", "app/main_window.py", "app/selenium_driver.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-n auto --cov=app --cov-fail-under=90 --cov-report=term-missing"
markers = ["debug: mark test for local debugging and run it in isolation"]
